--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.getElementById("shareButton").addEventListener("click", function() {
     // Verificar si el navegador soporta la API de Web Share
     if (navigator.share) {
         // Definir el mensaje a compartir
-        const message = "¡Echa un vistazo a esta Tienda de Hoodies! Visita su Tiktok: @bogotadesigns Instagram: @bogotadesigns";
+        const message = "¡Echa un vistazo a esta Tienda de Hoodies! Visita su Tiktok: @badduck.cc Instagram: @badduck.cc";
 
         // Obtener la URL actual
         const url = window.location.href;
