--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
             <div data-reflow-type="product-search" data-reflow-search-url="index.html" data-reflow-show-button="true"></div>
             <div data-reflow-type="product-list" data-reflow-layout="cards" data-reflow-order="date_desc" data-reflow-product-link="p.html?product={id}" data-reflow-show="image,name"></div>
         </section>
-    </main><script>
+    </main>
+    <nav class="navbar fixed-bottom shadow-lg navbar-light custom-navbar" style="background: var(--bs-gray-200);padding-left: 20px;padding-right: 30px;padding-top: 10px;padding-bottom: 0px;backdrop-filter: blur(0px);border-top-left-radius: 30px;border-top-right-radius: 30px;border-top: 1px none var(--bs-primary-border-subtle);">
+        <div class="container">
+            <div class="d-flex justify-content-center align-items-center" style="width: 100%;"><button class="btn btn-primary" id="shareButton" type="button" style="margin-bottom: 9px;width: 100%;border-top-right-radius: 0px;border-bottom-right-radius: 1px;"><i class="icon ion-android-share"></i>&nbsp;Compartir</button><button class="btn btn-danger add-button" type="button" style="margin-bottom: 9px;width: 100%;border-bottom-left-radius: 0px;border-top-left-radius: 0px;"><i class="icon ion-ios-download-outline"></i>&nbsp;Instalar</button></div>
+        </div>
+    </nav><script>
 document.getElementById("shareButton").addEventListener("click", function() {
     // Verificar si el navegador soporta la API de Web Share
     if (navigator.share) {
@@ -78,11 +83,6 @@ document.getElementById("shareButton").addEventListener("click", function() {
     }
 });
 </script>
-    <nav class="navbar fixed-bottom shadow-lg navbar-light custom-navbar" style="background: var(--bs-gray-200);padding-left: 20px;padding-right: 30px;padding-top: 10px;padding-bottom: 0px;backdrop-filter: blur(0px);border-top-left-radius: 30px;border-top-right-radius: 30px;border-top: 1px none var(--bs-primary-border-subtle);">
-        <div class="container">
-            <div class="d-flex justify-content-center align-items-center" style="width: 100%;"><button class="btn btn-primary" id="shareButton" type="button" style="margin-bottom: 9px;width: 100%;border-top-right-radius: 0px;border-bottom-right-radius: 1px;"><i class="icon ion-android-share"></i>&nbsp;Compartir</button><button class="btn btn-danger add-button" type="button" style="margin-bottom: 9px;width: 100%;border-bottom-left-radius: 0px;border-top-left-radius: 0px;"><i class="icon ion-ios-download-outline"></i>&nbsp;Instalar</button></div>
-        </div>
-    </nav>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.reflowhq.com/v2/toolkit.min.js" data-reflow-store="1539261737" data-reflow-locale="assets/js/es_Es.json"></script>
