--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body style="font-family: Inconsolata, monospace;">
     <nav class="navbar sticky-top shadow navbar-light custom-navbar" style="background: rgba(255,255,255,0.5);padding-left: 20px;padding-right: 20px;padding-top: 10px;border-bottom-left-radius: 30px;border-style: none;border-bottom-width: 1px;border-bottom-color: var(--bs-primary-border-subtle);backdrop-filter: blur(7px);">
-        <div class="container"><a class="navbar-brand" href="https://www.bogotadesigns.com/" style="margin-right: 0px;"><img class="img-fluid" src="assets/img/180.png" width="34" height="29"></a><a class="navbar-brand" href="#" style="font-size: 21.2px;"><strong>BADDUCK.CC</strong></a></div>
+        <div class="container"><a class="navbar-brand" style="margin-right: 0px;" href="index.html"><img class="img-fluid" src="assets/img/180.png" width="34" height="29"></a><a class="navbar-brand" href="#" style="font-size: 21.2px;"><strong>BADDUCK.CC</strong></a></div>
     </nav>
     <main class="d-md-none">
         <section style="margin: 10px;">
