--- a/p.html
+++ b/p.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BadDuck.cc - Tienda Online de Ropa Underground, Buzos, Hoodies, Camisetas y Oversized</title>
+    <meta name="theme-color" content="#ffffff">
     <link rel="canonical" href="https://www.badduck.cc/p.html">
     <meta property="og:url" content="https://www.badduck.cc/p.html">
     <meta name="twitter:card" content="summary">
@@ -25,6 +26,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/512.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.reflowhq.com/v2/toolkit.min.css">
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="assets/css/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
