--- a/p.html
+++ b/p.html
@@ -39,14 +39,14 @@
 <link rel="manifest" href="/manifest.json">
 </head>
 
-<body style="font-family: Inconsolata, monospace;">
+<body style="font-family: Inconsolata, monospace;color: rgb(255,255,255);background: rgb(0,0,0);">
     <main class="d-md-none">
-        <nav class="navbar sticky-top shadow navbar-light custom-navbar" style="background: rgba(255,255,255,0.5);padding-left: 20px;padding-right: 20px;padding-top: 10px;border-bottom-left-radius: 31px;border-style: none;border-bottom-width: 1px;border-bottom-color: var(--bs-primary-border-subtle);backdrop-filter: blur(7px);">
-            <div class="container"><a class="navbar-brand" href="index.html" style="margin-right: 0px;"><img class="img-fluid" src="assets/img/180.png" width="34" height="29"></a><a class="navbar-brand" href="#" style="font-size: 21.2px;"><strong>BADDUCK.CC</strong></a></div>
+        <nav class="navbar sticky-top bg-black shadow navbar-light custom-navbar" style="background: rgba(255,255,255,0.5);padding-left: 20px;padding-right: 20px;padding-top: 10px;border-bottom-left-radius: 31px;border-style: none;border-bottom-width: 1px;border-bottom-color: var(--bs-primary-border-subtle);backdrop-filter: blur(7px);" data-bs-theme="dark">
+            <div class="container"><a class="navbar-brand" href="index.html" style="margin-right: 0px;"><img class="img-fluid" src="assets/img/253.png" width="34" height="29"></a><a class="navbar-brand" href="#" style="font-size: 21.2px;"><strong>BADDUCK.CC</strong></a></div>
         </nav>
         <div data-reflow-type="product" data-reflow-shoppingcart-url="index.html" data-reflow-show="media,name,description" style="margin: 10px;"></div>
     </main>
-    <nav class="navbar fixed-bottom navbar-light custom-navbar" style="background: rgba(255,255,255,0.5);padding-left: 20px;padding-right: 30px;padding-top: 10px;padding-bottom: 0px;backdrop-filter: blur(6px);">
+    <nav class="navbar fixed-bottom bg-black navbar-light custom-navbar" style="background: rgba(255,255,255,0.5);padding-left: 20px;padding-right: 30px;padding-top: 10px;padding-bottom: 0px;backdrop-filter: blur(6px);" data-bs-theme="dark">
         <div class="container">
             <div class="d-flex align-items-center" style="width: 100%;"><button class="btn btn-primary" id="AshareButton" type="button" style="margin-bottom: 9px;width: 100%;border-top-right-radius: 0px;border-bottom-right-radius: 0px;"><i class="icon ion-help-circled"></i><span style="color: var(--bs-btn-hover-color); background-color: var(--bs-btn-hover-bg);">&nbsp;</span><span style="color: var(--bs-btn-hover-color);">Preguntar</span></button><button class="btn btn-success" id="shareButton" type="button" style="margin-bottom: 9px;border-top-left-radius: 0px;border-bottom-left-radius: 0px;width: 100%;"><i class="icon ion-social-whatsapp-outline"></i>&nbsp;Compartir</button></div>
         </div>
