--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <link rel="manifest" href="/manifest.json">
 </head>
 
-<body style="font-family: Inconsolata, monospace;">
-    <nav class="navbar sticky-top shadow navbar-light custom-navbar" style="background: rgba(255,255,255,0.5);padding-left: 20px;padding-right: 20px;padding-top: 10px;border-bottom-left-radius: 30px;border-style: none;border-bottom-width: 1px;border-bottom-color: var(--bs-primary-border-subtle);backdrop-filter: blur(7px);">
-        <div class="container"><a class="navbar-brand" style="margin-right: 0px;" href="index.html"><img class="img-fluid" src="assets/img/180.png" width="34" height="29"></a><a class="navbar-brand" href="#" style="font-size: 21.2px;"><strong>BADDUCK.CC</strong></a></div>
+<body style="font-family: Inconsolata, monospace;background: rgb(0,0,0);color: rgb(255,255,255);">
+    <nav class="navbar sticky-top bg-black shadow navbar-light custom-navbar" style="padding-left: 20px;padding-right: 20px;padding-top: 10px;border-bottom-left-radius: 30px;border-style: none;border-bottom-width: 1px;border-bottom-color: var(--bs-primary-border-subtle);backdrop-filter: blur(7px);" data-bs-theme="dark">
+        <div class="container"><a class="navbar-brand" style="margin-right: 0px;" href="index.html"><img class="img-fluid" src="assets/img/253.png" width="34" height="29"></a><a class="navbar-brand" href="#" style="font-size: 21.2px;"><strong>BADDUCK.CC</strong></a></div>
     </nav>
     <main class="d-md-none">
         <section style="margin: 10px;">
@@ -57,7 +57,7 @@
             <div data-reflow-type="product-list" data-reflow-layout="cards" data-reflow-order="date_desc" data-reflow-product-link="p.html?product={id}" data-reflow-show="image,name"></div>
         </section>
     </main>
-    <nav class="navbar fixed-bottom shadow-lg navbar-light custom-navbar" style="background: var(--bs-gray-200);padding-left: 20px;padding-right: 30px;padding-top: 10px;padding-bottom: 0px;backdrop-filter: blur(0px);border-top-left-radius: 30px;border-top-right-radius: 30px;border-top: 1px none var(--bs-primary-border-subtle);">
+    <nav class="navbar fixed-bottom bg-black shadow-lg navbar-light custom-navbar" style="background: var(--bs-gray-200);padding-left: 20px;padding-right: 30px;padding-top: 10px;padding-bottom: 0px;backdrop-filter: blur(0px);border-top-left-radius: 30px;border-top-right-radius: 30px;border-top: 1px none var(--bs-primary-border-subtle);" data-bs-theme="dark">
         <div class="container">
             <div class="d-flex justify-content-center align-items-center" style="width: 100%;"><button class="btn btn-primary" id="shareButton" type="button" style="margin-bottom: 9px;width: 100%;border-top-right-radius: 0px;border-bottom-right-radius: 1px;"><i class="icon ion-android-share"></i>&nbsp;Compartir</button><button class="btn btn-danger add-button" type="button" style="margin-bottom: 9px;width: 100%;border-bottom-left-radius: 0px;border-top-left-radius: 0px;"><i class="icon ion-ios-download-outline"></i>&nbsp;Instalar</button></div>
         </div>
