--- a/p.html
+++ b/p.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BadDuck.cc - Tienda Online de Ropa Underground, Buzos, Hoodies, Camisetas y Oversized</title>
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#000000">
     <link rel="canonical" href="https://www.badduck.cc/p.html">
     <meta property="og:url" content="https://www.badduck.cc/p.html">
     <meta name="twitter:card" content="summary">
