--- a/p.html
+++ b/p.html
@@ -55,7 +55,7 @@ document.getElementById("shareButton").addEventListener("click", function() {
     // Verificar si el navegador soporta la API de Web Share
     if (navigator.share) {
         // Definir el mensaje a compartir
-        const message = "¡Echa un vistazo a este articulo de la tienda Bogota Designs! Visita su Tiktok: @badduck.cc Instagram: @badduck.cc";
+        const message = "¡Echa un vistazo a este articulo de la tienda BadDuck! Visita su Tiktok: @badduck.cc Instagram: @badduck.cc";
 
         // Obtener la URL actual
         const url = window.location.href;
